mysql/test/corpus/insert.txt
================================================================================
MySQL: Insert with LOW_PRIORITY
================================================================================

INSERT LOW_PRIORITY my_table
VALUES('foo','bar', 3);

--------------------------------------------------------------------------------

(program
  (statement
    (insert
      (keyword_insert)
      (keyword_low_priority)
      (object_reference
        name: (identifier))
      (keyword_values)
      (list
        (literal)
        (literal)
        (literal)))))

================================================================================
MySQL: Insert with DELAYED
================================================================================

INSERT DELAYED my_table
VALUES('foo','bar', 3);

--------------------------------------------------------------------------------

(program
  (statement
    (insert
      (keyword_insert)
      (keyword_delayed)
      (object_reference
        name: (identifier))
      (keyword_values)
      (list
        (literal)
        (literal)
        (literal)))))

================================================================================
MySQL: Insert with HIGH_PRIORITY
================================================================================

INSERT HIGH_PRIORITY my_table
VALUES('foo','bar', 3);

--------------------------------------------------------------------------------

(program
  (statement
    (insert
      (keyword_insert)
      (keyword_high_priority)
      (object_reference
        name: (identifier))
      (keyword_values)
      (list
        (literal)
        (literal)
        (literal)))))
